--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,9 @@ webdriver-manager
 undetected-chromedriver
 
 numpy<2
-torch>=2.1.0,<2.2
+#torch>=2.1.0,<2.2
 sentence-transformers>=2.5.1,<3
-chromadb>=0.4.24
+#chromadb>=0.4.24
 
 undetected_chromedriver
 
